@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-04-10T01:17:39Z",
+  "timestamp" : "2025-04-11T01:18:12Z",
   "count_outdated" : 1815,
   "uniques_outdated" : 1056,
-  "count" : 1824,
-  "uniques" : 1065,
+  "count" : 1825,
+  "uniques" : 1066,
   "clones" : [
     {
       "timestamp": "2025-04-01T00:00:00Z",
@@ -76,6 +76,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-04-10T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
