@@ -1,5 +1,5 @@
 {
-  "count": 9,
+  "count": 10,
   "uniques": 3,
   "clones": [
     {
@@ -41,6 +41,11 @@
       "timestamp": "2025-04-09T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-04-10T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
